# m3u8Downloader

./: .env  .gitignore  README.md  index.html  package-lock.json  package.json  update-version.bat  vite.config.js
.github/workflows/: publish.yaml
scripts/: README.md  update-version.cjs  update-version.ps1
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos-aarch64.conf.json  tauri.macos-x86_64.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: download-ffmpeg.cjs
src-tauri/src/: commands.rs  download.rs  download_manager.rs  download_monitor.rs  lib.rs  main.rs  merge.rs
src-tauri/src/logger/: mod.rs  rotate.rs
src/plugins/: notificationPlugin.js  settingsPersistPlugin.js
src/router/: index.js
src/router/home/: dCompleted.js  dList.js  index.js  setting.js
src/store/: DownloadedStore.js  DownloadingStore.js  SettingStore.js  UIStore.js
src/utils/: fs.js  http.js  m3u8Validator.js
src/views/Home/: index.vue
src/views/Home/DownloadCompleted/: index.vue
src/views/Home/DownloadList/: index.vue
src/views/Home/Setting/: index.vue
src/views/Home/components/: DownloadItem.vue  HButton.vue  MainWrapper.vue  PageHeader.vue
