[package]
name = "m3u8Downloader"
version = "1.0.4"
description = "m3u8Downloader m3u8视频下载器"
authors = ["Colzry <colzry@foxmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"]  }
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"
futures = "0.3"
sysinfo = "0.29.2"
fern = "0.6"
log = "0.4"
chrono = "0.4"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
