[package]
name = "m3u8Downloader"
version = "1.1.2"
description = "m3u8Downloader m3u8视频下载器"
authors = ["Colzry <colzry@foxmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
sysinfo = "0.29.2"
fern = "0.6"
log = "0.4"
chrono = "0.4"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
rand = { version = "0.8", features = ["small_rng", "std"] }
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
